# arena_shooter

./: .gitignore  README.md  timelog.md
client/: CMakeLists.txt  Config.h.in  arena.cpp  generate_visual_studio_2017_x64.bat
client/MathFunctions/: CMakeLists.txt  MakeTable.cpp  mysqrt.cpp  mysqrt.h
client/cmake/: FindSDL2.cmake
client/h/: exceptions.h  fpscounter.h  gapi.h  resources.h  stdafx.h
client/h/game/: bullet.cpp  bullet.h  enemy.h  game.h  level.h
client/h/gapi/: gapi.h  model.h  particles.h  program.h  shader.h  texture.h  vao.h  vbo.h  wininit.h
client/h/gapi/loaders/: mymodel.h  pvr.h
client/h/math/: geom.h  math.h  matrix.h  package.h  random.h  vec4.h
client/h/scene/: camera.h  model.h  scene.h
client/res/: axes.pvr  cube.model  level.blend  plane.model  pvr_tex_tool_icon.pvr  pvr_tex_tool_icon2.pvr  warehouse.model
client/res/enemy/: enemy.blend
client/res/level/textures/: TableLightMap  stairs_lightmap
client/res/lightmaps/: environment.pvr
client/res/ui/: gameover.blend  gameover_black_background.blend  riffle_scope.blend
client/src/: fpscounter.cpp  resources.cpp
client/src/game/: bullet.cpp  enemy.cpp  level.cpp
client/src/gapi/: model.cpp  particles.cpp  program.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  wininit.cpp
client/src/gapi/loaders/: mymodel.cpp  pvr.cpp
client/src/math/: geom.cpp  matrix.cpp  random.cpp  vec4.cpp
client/src/scene/: camera.cpp  model.cpp  scene.cpp
docs-src/source/: conf.py  getting-started.rst  graphics-debugging.rst  index.rst  working-with-resources.rst
docs-src/source/res/code-docs/tests/: aabb-in-frustum.blend  sphere-in-frustum.blend  sphere-not-in-frustum.blend
utils/: models.py
